--- a/_layouts/about.old.html
+++ b/_layouts/about.old.html
@@ -5,11 +5,10 @@ layout: default
 <!-- about.html -->
       <div class="post">
         <header class="post-header">
-          <h1 class="post-title" style="height: 3em">
-           {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
-            <!-- <img src="/assets/img/icon.jpg" style="height: 3em; float: right"/> -->
+          <h1 class="post-title">
+            {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
           </h1>
-          <p class="desc" style="margin-top: -3.5em; margin-bottom: 2em; font-style: italic;">{{ page.subtitle }}</p>
+          <p class="desc">{{ page.subtitle }}</p>
         </header>
 
         <article>
@@ -24,10 +23,11 @@ layout: default
                 {%- assign profile_image_class = "img-fluid z-depth-1 rounded" -%}
               {% endif %}
 
-              {% include figure.html 
-              path=profile_image_path 
+              {% include figure.html
+              path=profile_image_path
               class=profile_image_class
-              alt=page.profile.image -%}
+              alt=page.profile.image
+              cache_bust=true -%}
             {% endif -%}
             {%- if page.profile.address %}
             <div class="address">
@@ -42,9 +42,15 @@ layout: default
           </div>
 
           <!-- News -->
-          {% if page.news -%}
+          {% if page.news and site.announcements.enabled -%}
             <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
             {%- include news.html limit=true %}
+          {%- endif %}
+
+          <!-- Latest posts -->
+          {% if page.latest_posts -%}
+            <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">latest posts</a></h2>
+            {%- include latest_posts.html %}
           {%- endif %}
 
           <!-- Selected papers -->
@@ -63,7 +69,7 @@ layout: default
               <div class="contact-note">
                 {{ site.contact_note }}
               </div>
-              
+
             </div>
           {%- endif %}
         </article>
