--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,8 @@
 
-          <div class="publications">
+          <!-- <div class="publications">
             {% bibliography -f papers -q @*[selected=true]* %}
+          </div> -->
+
+          <div class="publications">
+            {% bibliography -f {{ site.scholar.bibliography }} -q @*[selected=true]* %}
           </div>
