add visitor count widget

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -59,6 +59,12 @@ layout: default
             {%- include selected_papers.html %}
           {%- endif %}
 
+          <!-- <a href="https://clustrmaps.com/site/1bw71" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Cvj9_521hlkyFrmCxHR7mZ_sUYfoEehibkwUH5Od-Is&cl=ffffff"></a> -->
+          <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Cvj9_521hlkyFrmCxHR7mZ_sUYfoEehibkwUH5Od-Is&cl=ffffff&w=a"></script> -->
+          <p align="center"> 
+            <a href='https://clustrmaps.com/site/1bw71'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=080808&w=450&t=tt&d=Cvj9_521hlkyFrmCxHR7mZ_sUYfoEehibkwUH5Od-Is&co=ffffff&ct=808080'/></a>
+          </p>
+
           <!-- Social -->
           {%- if page.social %}
             <div class="social">
