removed visit tracker

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -61,7 +61,8 @@ layout: default
 
           <!-- <a href="https://clustrmaps.com/site/1bw71" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Cvj9_521hlkyFrmCxHR7mZ_sUYfoEehibkwUH5Od-Is&cl=ffffff"></a> -->
           <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Cvj9_521hlkyFrmCxHR7mZ_sUYfoEehibkwUH5Od-Is&cl=ffffff&w=a"></script> -->
-          <p align="center"> 
+          <!-- <p align="center" style="display: none">  -->
+          <p align="center" style="display: none"> 
             <a href='https://clustrmaps.com/site/1bw71'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=080808&w=450&t=m&d=Cvj9_521hlkyFrmCxHR7mZ_sUYfoEehibkwUH5Od-Is&co=ffffff&ct=808080'/></a>
           </p>
 
